--- a/idcardcamera/src/main/res/layout/activity_camera.xml
+++ b/idcardcamera/src/main/res/layout/activity_camera.xml
@@ -43,6 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:background="@color/preview_mock"
                     android:gravity="center"
                     android:lineSpacingExtra="3dp"
                     android:text="请将身份证国徽面放进扫描框内，\n并对齐边缘，保持照片清晰，避免反光和阴影"
@@ -83,7 +84,7 @@
             android:id="@+id/fl_camera_option"
             android:layout_width="136dp"
             android:layout_height="match_parent"
-            android:background="@color/preview_mock">
+            android:background="@color/color_000000">
 
             <!--拍照前操作布局-->
             <LinearLayout
