--- a/idcardcamera/src/main/res/values/colors.xml
+++ b/idcardcamera/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="preview_mock">#9a000000</color>
+    <color name="preview_mock">#66000000</color>
     <color name="color_000000">#000000</color>
     <color name="color_afff">#afff</color>
+    <color name="color_ffffff">#fff</color>
 </resources>
